# FlaskProjectPersonalBusinessCard2

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/: __init__.py  models.py
app/auth/: routes.py
app/main/: __init__.py  routes.py
app/static/css/: style.css
app/templates/: base.html  index.html
tests/: test_basic.py
