[project]
name = "flaskprojectpersonalbusinesscard2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-migrate>=4.1.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
